--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,6 +47,7 @@
     margin-right: auto;
     margin-left: auto;
     display: flex;
+	flex-direction: column;
     justify-content: space-around;
 }
 
@@ -54,5 +55,26 @@
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.show-username {
+	margin-right: 1rem;
+}
+
+.glyphicon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.glyphicon-user:before {
+  content: "\e008";
 }
 
